--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,12 @@
-cmake_minimum_required(VERSION 3.10)
+cmake_minimum_required(VERSION 3.15)
 
 project(les5)
 
-set(SOURCES main.cpp Pair1.h Pair2.h)
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(les5 ${SOURCES})
+add_executable(${PROJECT_NAME}
+    main.cpp
+    Pair1.h
+    Pair2.h
+    StringValuePair.h)
